# lucio

./: .gitignore  Cargo.toml  README.md  deny.toml  justfile  rustfmt.toml
.github/workflows/: release.yml  verify.yml
Formula/: lucio.rb
crates/lucio/: Cargo.toml
crates/lucio-core/: Cargo.toml
crates/lucio-core/src/: clone.rs  error.rs  launch.rs  lib.rs  local_state.rs  manifest.rs  paths.rs  profile.rs  running.rs  util.rs
crates/lucio/src/: main.rs  tui.rs
crates/lucio/tests/: cli.rs
scripts/: update-homebrew-formula.sh
