[package]
name = "lucio-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for lucio: clone Vivaldi profiles into isolated settings/extensions templates."
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
walkdir = { workspace = true }
camino = { workspace = true }
tracing = { workspace = true }
indicatif = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
