[package]
name = "lucio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI to create new Vivaldi profiles based on existing ones (isolated settings/extensions templates)."
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
default-run = "lucio"

[[bin]]
name = "lucio"
path = "src/main.rs"

[dependencies]
lucio-core = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
anyhow = { workspace = true }
camino = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
